# lectern

./: .gitignore  README.md  pyproject.toml
bibliography/: references.bib
src/: index.md  publications.md
src/assets/img/: README.md
src/blog/: 2025-01-01-getting-started.md  2025-01-15-advanced-features.md  2025-02-01-customization-guide.md
src/lectern/: build.py  config.py
static/css/: style.css
static/js/: main.js
templates/: base.html  blog_list.html  blog_post.html  home.html  publications.html
