[project]
name = "lectern"
version = "0.1.0"
description = "A lightweight static site generator for personal blog and portfolio"
authors = [
    {name = "Alexander Weers"}
]
requires-python = ">=3.7"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "markdown>=3.4",
    "pygments>=2.15",
    "pybtex>=0.24",
    "python-frontmatter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
